2006-05-17 Paul Jakma <paul.jakma@sun.com>

	* vtysh.c: (general) Add 'show logging' command.

2006-01-11 Erik Smit <zoiah@zoiah.net>

	* vtysh.c: (vtysh_config_from_file) fix regression from
	  a previous cleanup, vtysh_client.flags and cmd->daemon are
	  bitwise flags, bitwise & was meant to be used. Fixes breakage
	  of integrated config file reading.

2005-09-15 Hasso Tepper <hasso at quagga.net>

	* vtysh.c: Fix warning by casting rl_bind_key 2. argument correctly.
	* extract.pl.in: Fix warning - add isisd/topology to the includes.

2005-08-22 Hugo Santos <hsantos@av.it.pt>

	* vtysh.c: Add support for BGP_IPV6M_NODE
	
2005-07-12 Christian Hammers <ch@debian.org>

	* vtysh_user.c: rename struct user to struct vtysh_user to avoid
	  clashes with sys/user.h on Linux/ARM.

2005-04-07 Hasso Tepper <hasso at quagga.net>

	* Makefile.am: Remove rebuild4 target, it's not used any more by build
	  procedure. Define vtysh_cmd_FILES. Use EXTRA_DIST.
	* extract.pl.in: Ignore "router zebra".

2005-03-28 Hasso Tepper <hasso at quagga.net>

	* extract.pl.in: Use SNMP_INCLUDES to avoid warnings if compiling with
	  snmp support.

2005-03-09 Hasso Tepper <hasso at quagga.net>

	* vtysh_config.c: Move password commands to the AAA_NODE. It
	  quarantees that they will appear after SERVICE_NODE to make sure
	  that encrypted passwords will work ("service password-encryption"
	  command).

2005-01-28 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* vtysh.h: Remove obsolete VTYSH_INDEX_* defines.  Fix many prototypes
	  for functions with no arguments (must specify argument list as void).
	* vtysh.c: Enhance vtysh_client array to include the daemon's name
	  and bitmask and socket path (in addition to the fd).  This allows
	  us to use loop constructs for various operations that need to be
	  applied to all client daemons, and it facilitates better error
	  messages.  Also fix some prototypes with void argument lists.