@@ -1,3 +1,8 @@
+2006-05-21 Paul Jakma <paul.jakma@sun.com>
+
+	* vtysh.c: (vtysh_show_logging_cmd) Suppress output for daemons
+	  which are not running (Andrew Schorr).
+
 2006-05-17 Paul Jakma <paul.jakma@sun.com>
 
 	* vtysh.c: (general) Add 'show logging' command.
